--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset-utf-8"/>
 		<title>A page of Quotations</title>
+		<title>An Empty Web Page</title>
 	</head>
 	<body>
 		<h1 style = "color: Blue">This web page is blank</h1>
