--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li>"A man is but the product of his thoughts. What he thinks, he becomes." --Mahatma Gandhi quote</li>
 			<li>"Nothing is more dangerous than an idea, when it's the only one we have." --Emile Chartler</li>
 			<li>"Life's like a ovie. Write your own ending." --Kermit the Frog</li>
+			<li>"Fools rush in where angels fear to tread." --Alexander Pope</li>
 		</ul>
 	</body>
 </html>
