--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<li>"Nothing is more dangerous than an idea, when it's the only one we have." --Emile Chartler</li>
 			<li>"Life's like a ovie. Write your own ending." --Kermit the Frog</li>
 			<li>"Live long and prosper." --S'chn T'gai Spock</li>
+			<li>Love your enemies, for they tell you your faults." --Benjamin Franklin</li>
 		</ul>
 	</body>
 </html>
